Update api client and routes
